test/zaun/ingress-communication.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zaun-communication
  namespace: zaun
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,OPTIONS,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Origin,Accept,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2048M
spec:
  rules:
    - host: communication.wechat.u-jy.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: zaun-communication-h5
              servicePort: 80
  tls:
    - hosts:
        - communication.wechat.u-jy.cn
      secretName: tls-pem-w
