test/zaun/ingress-zaun.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zaun-ingress
  namespace: zaun
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,OPTIONS,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "ujy-session,token,User-Agent,Keep-Alive,Content-Type,Origin,Accept,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048M
    nginx.ingress.kubernetes.io/client-max-body-size: 2048M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2048M
    nginx.ingress.kubernetes.io/proxy-send-timeout: 1200s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 1200s
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: credential.dinghaotech.com
      http:
        paths:
          - path: /api/
            backend:
              serviceName: zaun-credential-api
              servicePort: 2000
          - path: /
            backend:
              serviceName: zaun-credential-web
              servicePort: 80
    - host: certificate.dinghaotech.com
      http:
        paths:
          - path: /api/
            backend:
              serviceName: zaun-certificate-api
              servicePort: 2000
          - path: /
            backend:
              serviceName: zaun-certificate-web
              servicePort: 80
    - host: internship.dinghaotech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: internship
              servicePort: 80
    - host: internship-wechat.dinghaotech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: zaun-internship-wechat
              servicePort: 80
